--- a/1-4/DivPuzzle2.html
+++ b/1-4/DivPuzzle2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
@@ -23,14 +23,12 @@
             <div id="yellow"></div>
             <div id="blue"></div>
           </div>
-
         </div>
         <div id="red"></div>
       </div>
     </div>
     <div id="orange"></div>
   </div>
-
 </body>
 
 </html>
